# KubeSentiment

./: .coveragerc  .editorconfig  .env.development.template  .env.local.template  .env.production.template  .env.staging.template  .env.template  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BENCHMARK_SUITE_SUMMARY.md  CICD_README.md  CI_CD_FIX_SUMMARY.md  CLAUDE.md  CODE_QUALITY_SETUP.md  CONFIG_PROFILES_README.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_FIX_SUMMARY.md  DOCUMENTATION_REVIEW.md  Dockerfile  Dockerfile.distroless  Dockerfile.new  Dockerfile.optimized  IMPLEMENTATION_PROFILE_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  KUBERNETES.md  LINTING_GUIDE.md  MODEL_SPEC.md  MONITORING.md  Makefile  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  (+31 more)
.claude/: settings.local.json
.cursor/: summary_linting_setup.txt
.github/: SECRETS.md  WORKFLOWS_REFACTORING_SUMMARY.md  codeql-config.yml  copilot-instructions.md
app/: ARCHITECTURE.md  MIGRATION_GUIDE.md  UNIFIED_API_README.md  __init__.py  api.py  api_onnx.py  config.py  correlation_middleware.py  error_codes.py  exceptions.py  logging_config.py  main.py  middleware.py  monitoring.py  unified_api.py
benchmarking/: BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_TEMPLATE.md  README.md  RESOURCE_RIGHT_SIZING.md  async_batch_performance_test.py  install.sh  kafka_performance_test.py  load_test.py  onnx_dynamic_quant_benchmark.py  quick-benchmark.sh  requirements.txt
chaos/: README.md
config/: README.md  alertmanager-config.yaml  alertmanager.yml  environments.yaml  grafana-datasources-complete.yaml  grafana-vault-dashboard.json  loki-config.yaml  prometheus-rules.yaml  prometheus.yml  promtail-config.yaml
docs/: API_CHANGELOG.md  API_REFERENCE.md  API_VERSIONING.md  BENCHMARKING.md  CICD_FIXES.md  CICD_QUICK_REFERENCE.md  CODE_QUALITY_IMPLEMENTATION.md  CODE_QUALITY_QUICK_REFERENCE.md  CODE_STANDARDS.md  CONFIGURATION_ARCHITECTURE.md  CONFIGURATION_MIGRATION.md  CONFIGURATION_PROFILES.md  DATA_LAKE_INTEGRATION.md  DEBUGGING_GUIDE.md  DEVELOPER_SETUP.md  ENVIRONMENT_CONFIGURATIONS.md  ERROR_HANDLING.md  GPU_COST_ANALYSIS.md  GPU_DEPLOYMENT_GUIDE.md  INDEX.md  KUBERNETES.md  MODEL_PERSISTENCE.md  MONITORING.md  OBSERVABILITY_ARCHITECTURE.md  OBSERVABILITY_GUIDE.md  QUICKSTART_MODEL_PERSISTENCE.md  QUICK_REFERENCE.md  QUICK_WINS_FEATURES.md  REFACTORING_PLAN.md  SCALABILITY_ENHANCEMENTS.md  SECURITY_AUDIT_REPORT.md  SERVICE_INTERFACES.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VECTORIZATION_OPTIMIZATION.md  VECTORIZATION_SUMMARY.md  architecture.md  kafka-high-throughput.md
infrastructure/: providers.tf
k8s/: config-dev.yaml  config-production.yaml  config-staging.yaml  config.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  prometheus-config.yaml  redis-deployment.yaml  (+2 more)
(+413 files in other folders)
